--- a/public/latest/assets/admin-css/style.css
+++ b/public/latest/assets/admin-css/style.css
@@ -102,3 +102,86 @@ body {
 .main-page-wrapper {
   width: 100%;
 }
+
+.common-bttn {
+  border-radius: 0.375rem;
+  background: var(--primary-color-blue, #294CFF);
+  display: inline-block;
+  padding: 0.75rem 1.5rem;
+  color: #FFF;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  transition: all linear 0.3s;
+}
+.common-bttn i {
+  margin-right: 0.5rem;
+}
+.common-bttn:hover {
+  background-color: #121212;
+  color: #fff;
+}
+
+.paggination-wrap .pagination .page-item .page-link {
+  padding: 0.5rem 1rem;
+  color: var(--text-light-primary, #212B36);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem;
+  margin: 0 0.2rem;
+  background-color: transparent;
+  border: 0;
+  border-radius: 3.125rem;
+  transition: all linear 0.3s;
+}
+.paggination-wrap .pagination .page-item .page-link:hover {
+  background: var(--action-light-selected, rgba(145, 158, 171, 0.16));
+}
+.paggination-wrap .pagination .page-item.active .page-link {
+  background: var(--action-light-selected, rgba(145, 158, 171, 0.16)) !important;
+}
+
+.form-submit-bttns {
+  text-align: right;
+}
+.form-submit-bttns .btn-cancel {
+  border-radius: 0.5rem;
+  border: 1px solid var(--neutral-color-neutral-40, #C5CCD8);
+  background: var(--neutral-color-white, #FFF);
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  padding: 0.6rem 1rem;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.25rem;
+  height: 3rem;
+  transition: all linear 0.3s;
+}
+.form-submit-bttns .btn-cancel:hover {
+  background-color: #C5CCD8;
+}
+.form-submit-bttns .btn-submit {
+  border-radius: 0.5rem;
+  border-radius: 0.5rem;
+  border: 1px solid var(--primary-color-blue, #294CFF);
+  background: var(--primary-color-blue, #294CFF);
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+  color: #fff;
+  padding: 0.6rem 1rem;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.25rem;
+  height: 3rem;
+  transition: all linear 0.3s;
+  margin-left: 1rem;
+}
+.form-submit-bttns .btn-submit:hover {
+  background-color: #252525;
+}
