--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,24 +4,112 @@
 @use './util/media-query' as q;
 
 // regular css
-.main-page-wrapper{
+.main-page-wrapper {
     width: 100%;
 }
- 
+
+.common-bttn {
+    border-radius: 0.375rem;
+    background: var(--primary-color-blue, #294CFF);
+    display: inline-block;
+    padding: 0.75rem 1.5rem;
+    color: #FFF; 
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5rem;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    transition: all linear .3s;
+    i{
+        margin-right: 0.5rem;
+    }
+    &:hover{
+        background-color: #121212;
+        color: #fff;
+    }
+}
+
+.paggination-wrap {
+    .pagination {
+        .page-item {
+            .page-link {
+                padding: .5rem 1rem;
+                color: var(--text-light-primary, #212B36);
+                font-size: 1rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 1.5rem;
+                margin: 0 .2rem;
+                background-color: transparent;
+                border: 0;
+                border-radius: 3.125rem;
+                transition: all linear .3s;
+
+                &:hover {
+                    background: var(--action-light-selected, rgba(145, 158, 171, 0.16));
+                }
+            }
+        }
+
+        .page-item.active {
+            .page-link {
+                background: var(--action-light-selected, rgba(145, 158, 171, 0.16)) !important;
+            }
+        }
+    }
+}
+
+.form-submit-bttns {
+    text-align: right;
+
+    .btn-cancel {
+        border-radius: 0.5rem;
+        border: 1px solid var(--neutral-color-neutral-40, #C5CCD8);
+        background: var(--neutral-color-white, #FFF);
+        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+        color: var(--neutral-color-neutral-70, #2F3A4C);
+        padding: .6rem 1rem;
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.25rem;
+        height: 3rem;
+        transition: all linear .3s;
+
+        &:hover {
+            background-color: #C5CCD8;
+        }
+    }
+
+    .btn-submit {
+        border-radius: 0.5rem;
+        border-radius: 0.5rem;
+        border: 1px solid var(--primary-color-blue, #294CFF);
+        background: var(--primary-color-blue, #294CFF);
+        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+        color: #fff;
+        padding: .6rem 1rem;
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.25rem;
+        height: 3rem;
+        transition: all linear .3s;
+        margin-left: 1rem;
+
+        &:hover {
+            background-color: #252525;
+        }
+    }
+}
 
 // responsive css start
-@include q.responsive(phone) {
-    
-}
+@include q.responsive(phone) {}
 
-@include q.responsive(landphone) {
-    
-}
+@include q.responsive(landphone) {}
 
-@include q.responsive(tablet) {
-    
-}
+@include q.responsive(tablet) {}
 
-@include q.responsive(landtablet) {
-    
-}
+@include q.responsive(landtablet) {}
