--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -2,25 +2,68 @@
   border-radius: 1rem;
   background: var(--background-light-paper, #FFF);
   box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.12), 0px 0px 2px 0px rgba(145, 158, 171, 0.2);
-  display: flex;
   min-height: 20.625rem;
   padding: 0.5rem 0.5rem 1rem 0.5rem;
-  flex-direction: column;
-  align-items: center;
   flex: 1 0 0;
+}
+.course-single-item .course-thumb-box {
+  position: relative;
+  min-height: 12rem;
 }
 .course-single-item .course-thumb-box img {
   flex: 1 0 0;
   align-self: stretch;
   border-radius: 0.5rem;
 }
+.course-single-item .course-thumb-box span.badge {
+  position: absolute;
+  left: 1rem;
+  top: 1rem;
+}
+.course-single-item .course-thumb-box .header-action {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3.125rem;
+  background: rgba(255, 255, 255, 0.2);
+  padding: 0.2rem;
+  width: 2rem;
+  height: 2rem;
+}
+.course-single-item .course-thumb-box .header-action i {
+  color: #fff;
+}
+.course-single-item .course-thumb-box .header-action .dropdown-menu {
+  transform: translate3d(-162.4px, -26.6px, 0px) !important;
+}
 .course-single-item .course-txt-box {
+  padding-top: 0.75rem;
+  padding: 0.5rem;
+  padding-bottom: 0;
+}
+.course-single-item .course-txt-box ul {
   display: flex;
-  padding: 0.75rem 0rem 0rem 0.25rem;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 0.25rem;
-  align-self: stretch;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 0.3rem;
+}
+.course-single-item .course-txt-box ul li {
+  margin-right: 0.3rem;
+}
+.course-single-item .course-txt-box ul li span {
+  display: inline-block;
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.375rem;
+}
+.course-single-item .course-txt-box ul li i {
+  color: #FFB900;
+  font-size: 0.875rem;
 }
 .course-single-item .course-txt-box a {
   color: var(--neutral-color-neutral-90, #101C2D);
@@ -28,6 +71,7 @@
   font-style: normal;
   font-weight: 600;
   line-height: 1.5rem;
+  margin-bottom: 0.2rem;
 }
 .course-single-item .course-txt-box p {
   color: var(--neutral-color-neutral-60, #66768E);
@@ -35,6 +79,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 1.375rem;
+  margin-bottom: 0.2rem;
 }
 .course-single-item .course-txt-box h5 {
   color: var(--neutral-color-neutral-90, #101C2D);
@@ -50,4 +95,378 @@
   font-weight: 400;
   line-height: 1.75rem;
   text-decoration: line-through;
+}
+
+.vimeo-player {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  width: 100%;
+}
+
+.vimeo-player iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+span.finsihLesson {
+  float: right;
+  font-size: 12px;
+  color: #111;
+  margin-top: 12px;
+  cursor: pointer;
+}
+
+.course-outline-box .accordion .accordion-item ul li a.active {
+  font-weight: 700;
+}
+
+.player .vp-video-wrapper .vp-preview {
+  border-radius: 0.75rem 0.75rem 0rem 0rem !important;
+}
+
+.course-title {
+  align-items: center;
+  padding: 1.5rem 1.25rem;
+}
+.course-title h1 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 140%;
+  letter-spacing: 0.00613rem;
+  margin-bottom: 0.69rem;
+}
+.course-title p {
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.course-left hr {
+  height: 2px;
+  background-color: #E5ECF6;
+  width: 100%;
+  border: 0;
+  margin: 1rem 0;
+  margin-top: 0;
+}
+
+.content-txt-box {
+  border-radius: 0.75rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: var(--neutral-color-white, #FFF);
+  padding: 1.25rem;
+}
+.content-txt-box h3 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+  margin-bottom: 0.8rem;
+}
+.content-txt-box .course-desc-txt p {
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem;
+  margin-bottom: 1rem;
+}
+.content-txt-box .course-desc-txt h2,
+.content-txt-box .course-desc-txt h3,
+.content-txt-box .course-desc-txt h4 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 2rem;
+  margin-bottom: 1rem;
+}
+.content-txt-box .course-desc-txt h5,
+.content-txt-box .course-desc-txt h6 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.download-files-box {
+  border-radius: 0.75rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: var(--neutral-color-white, #FFF);
+  padding: 1.5rem;
+  margin-top: 2rem;
+}
+.download-files-box h4 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+  margin-bottom: 0.8rem;
+}
+.download-files-box .files {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+.download-files-box .files a {
+  border-radius: 0.375rem;
+  border: 1px solid #DCE0F2;
+  background: #EAEDFF;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.75rem 1.5rem;
+  margin-right: 1.5rem;
+  transition: all linear 0.3s;
+  color: var(--primary-color-blue, #294CFF);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+  margin-top: 0.5rem;
+  /* 1.5rem */
+}
+.download-files-box .files a:last-child {
+  margin-right: 0;
+}
+.download-files-box .files a img {
+  margin-left: 0.75rem;
+}
+
+.course-review-wrap {
+  margin-top: 2rem;
+}
+.course-review-wrap h3 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+}
+.course-review-wrap .media {
+  align-items: center;
+  margin-top: 1.5rem;
+}
+.course-review-wrap .media img {
+  margin-right: 1rem;
+  width: 3.87rem;
+  height: 3.87rem;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.course-review-wrap .media h5 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+}
+.course-review-wrap .media p {
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25rem;
+}
+.course-review-wrap .media ul {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.course-review-wrap .media ul li i {
+  display: inline-block;
+  font-size: 0.9rem;
+  color: #FFB900;
+  margin-right: 0.3rem;
+}
+
+.course-outline-wrap {
+  border-radius: 0.75rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: #FFF;
+  padding: 1.5rem;
+  max-height: 560px;
+  overflow-y: scroll;
+}
+.course-outline-wrap .header {
+  margin-bottom: 0.75rem;
+}
+.course-outline-wrap .header h3 {
+  color: var(--neutral-color-neutral-80, #1C2636);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 155%;
+}
+.course-outline-wrap .header h6 {
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 155%;
+  margin-top: 0.25rem;
+}
+.course-outline-wrap .accordion .accordion-item {
+  border-radius: 0.75rem;
+  border: 0 !important;
+  border-top: 1px solid var(--neutral-color-neutral-30, #E5ECF6) !important;
+  background: #FFF;
+  border-radius: 0 !important;
+}
+.course-outline-wrap .accordion .accordion-item .lesson-wrap {
+  margin-left: 1rem;
+}
+.course-outline-wrap .accordion .accordion-item .lesson-wrap a {
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  display: block;
+  margin-bottom: 0.5rem;
+}
+.course-outline-wrap .accordion .accordion-item .lesson-wrap a i {
+  color: #A6B1C4;
+  font-size: 0.9rem;
+  margin-right: 0.4rem;
+}
+.course-outline-wrap .accordion .accordion-button {
+  padding: 0.75rem 0 !important;
+  background-color: #fff !important;
+  border: 0 !important;
+  overflow: hidden;
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  text-overflow: ellipsis;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 155%;
+}
+.course-outline-wrap .accordion .accordion-button p i {
+  color: #A6B1C4;
+  font-size: 1rem;
+  margin-right: 0.4rem;
+}
+.course-outline-wrap .accordion .accordion-button:not(.collapsed) {
+  box-shadow: none !important;
+}
+.course-outline-wrap .accordion .accordion-button::after,
+.course-outline-wrap .accordion .accordion-button:not(.collapsed)::after {
+  background-image: none !important;
+}
+
+.related-course-box {
+  border-radius: 0.75rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: #FFF;
+  padding: 1.5rem;
+  margin-top: 2rem;
+}
+.related-course-box h3 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+  border-bottom: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  margin-bottom: 0.69rem;
+  padding-bottom: 0.69rem;
+}
+
+.user-search-box-wrap.bundle-search-grid {
+  grid-template-columns: 62% 19% 19%;
+}
+
+.module-status .text-bg-danger,
+.module-status .text-bg-primary {
+  border-radius: 0.125rem !important;
+  background: #E6F7EE !important;
+  color: #00AB55 !important;
+  font-size: 0.875rem !important;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.375rem;
+  padding: 0rem 0.625rem !important;
+}
+.module-status .text-bg-danger {
+  background: #FFE5D8 !important;
+  color: #F46D29 !important;
+}
+
+.lesson-create-page .form-group,
+.module-update-page .form-group,
+.module-create-page .form-group {
+  position: relative;
+}
+.lesson-create-page .form-group i,
+.module-update-page .form-group i,
+.module-create-page .form-group i {
+  position: absolute;
+  right: 1rem;
+  top: 2.7rem;
+  font-size: 1.5rem;
+  color: #101828;
+}
+
+@media (min-width: 320px) and (max-width: 574px) {
+  .course-title {
+    padding: 1rem 0;
+  }
+  .course-title h1 {
+    font-size: 1.2rem;
+  }
+  .download-files-box,
+  .content-txt-box {
+    padding: 1rem;
+  }
+  .download-files-box .files a {
+    font-size: 0.8rem;
+    padding: 0.4rem 0.8rem;
+    margin-right: 0.3rem;
+  }
+  .course-outline-wrap {
+    margin-top: 2rem;
+    padding: 1rem;
+  }
+}
+@media (min-width: 574px) and (max-width: 767px) {
+  .course-title {
+    padding: 1rem 0;
+  }
+  .course-title h1 {
+    font-size: 1.2rem;
+  }
+  .download-files-box,
+  .content-txt-box {
+    padding: 1rem;
+  }
+  .download-files-box .files a {
+    font-size: 0.8rem;
+    padding: 0.4rem 0.8rem;
+    margin-right: 0.3rem;
+  }
+  .course-outline-wrap {
+    margin-top: 2rem;
+    padding: 1rem;
+  }
+}
+@media (min-width: 767px) and (max-width: 992px) {
+  .course-outline-wrap {
+    margin-top: 2rem;
+  }
 }
