--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -43,30 +43,6 @@
   text-align: center;
   margin-bottom: 2rem;
 }
-.user-grid-box .header-action {
-  text-align: right;
-}
-.user-grid-box .header-action .dropdown-menu {
-  border-radius: 0.375rem;
-  background: var(--background-light-paper, #FFF);
-  box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.24), 0px 0px 2px 0px rgba(145, 158, 171, 0.24);
-  transform: translate3d(54.6px, -25.6px, 0px) !important;
-  padding: 0.5rem;
-  border: 0;
-}
-.user-grid-box .header-action .dropdown-menu li .dropdown-item {
-  overflow: hidden;
-  color: var(--neutral-color-neutral-90, #101C2D);
-  font-family: Inter;
-  font-size: 0.875rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.375rem;
-  display: inline-block;
-  padding: 0.5rem 0.8rem;
-  border-radius: 8px;
-  margin: 0;
-}
 .user-grid-box .btn-ellipse {
   border-radius: 3.125rem;
   background: var(--action-light-hover, rgba(145, 158, 171, 0.08));
@@ -131,6 +107,31 @@
   font-weight: 500;
   line-height: 1.5rem;
   /* 171.429% */
+}
+
+.header-action {
+  text-align: right;
+}
+.header-action .dropdown-menu {
+  border-radius: 0.375rem;
+  background: var(--background-light-paper, #FFF);
+  box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.24), 0px 0px 2px 0px rgba(145, 158, 171, 0.24);
+  transform: translate3d(54.6px, -25.6px, 0px) !important;
+  padding: 0.5rem;
+  border: 0;
+}
+.header-action .dropdown-menu li .dropdown-item {
+  overflow: hidden;
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-family: Inter;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.375rem;
+  display: inline-block;
+  padding: 0.5rem 0.8rem;
+  border-radius: 8px;
+  margin: 0;
 }
 
 .user-profile-picture {
