--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -423,6 +423,61 @@ span.finsihLesson {
   color: #101828;
 }
 
+.lesson-files-upload .media2,
+.lesson-files-upload .media {
+  border-radius: 8px;
+  border: 1px dashed var(--neutral-color-neutral-40, #C5CCD8);
+  background: var(--neutral-color-neutral-10, #F9FAFB);
+  align-items: center;
+  padding: 2.5rem;
+}
+.lesson-files-upload .media2 img,
+.lesson-files-upload .media img {
+  margin-right: 2rem;
+}
+.lesson-files-upload .media2 .media-body h5,
+.lesson-files-upload .media .media-body h5 {
+  color: var(--colors-text-light-primary-g-800, #212B36);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+}
+.lesson-files-upload .media2 .media-body p,
+.lesson-files-upload .media .media-body p {
+  color: var(--colors-text-light-secondary-g-600, #637381);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+}
+.lesson-files-upload .media2 .media-body p a,
+.lesson-files-upload .media .media-body p a {
+  color: #02344F;
+  text-decoration: underline;
+}
+.lesson-files-upload .uploaded-image2,
+.lesson-files-upload .uploaded-image {
+  display: none;
+  margin-top: 1rem;
+  position: relative;
+}
+.lesson-files-upload .uploaded-image img {
+  max-width: 100%;
+  border-radius: 10px;
+}
+.lesson-files-upload .close-icon {
+  position: absolute;
+  top: -3px;
+  right: -3px;
+  cursor: pointer;
+  font-size: 1rem;
+  background-color: #294CFF;
+  color: #fff;
+  border-radius: 4px;
+  padding: 2px 5px;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .course-title {
     padding: 1rem 0;
