--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -486,7 +486,67 @@ span.finsihLesson {
     }
 }
 
+.lesson-files-upload{
+    .media2,
+    .media {
+        border-radius: 8px;
+        border: 1px dashed var(--neutral-color-neutral-40, #C5CCD8);
+        background: var(--neutral-color-neutral-10, #F9FAFB);
+        align-items: center;
+        padding: 2.5rem;
+        img{
+            margin-right: 2rem;
+        }
 
+        .media-body {
+            h5 {
+                color: var(--colors-text-light-primary-g-800, #212B36);
+                font-size: 20px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 30px; 
+            }
+           
+
+            p {
+                color: var(--colors-text-light-secondary-g-600, #637381); 
+                font-size: 14px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 22px;
+               a{
+                color: #02344F;
+                text-decoration: underline;
+               }
+            }
+        }
+    }
+
+    .uploaded-image2,
+    .uploaded-image {
+        display: none;
+        margin-top: 1rem;
+        position: relative;
+    }
+    
+    .uploaded-image img {
+        max-width: 100%;
+        border-radius: 10px;
+    }
+    
+    .close-icon {
+        position: absolute;
+        top: -3px;
+        right: -3px;
+        cursor: pointer;
+        font-size: 1rem;
+        background-color: #294CFF;
+        color: #fff;
+        border-radius: 4px;
+        padding: 2px 5px;
+    }
+    
+}
 
 
 
