--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -470,6 +470,7 @@ span.finsihLesson {
     }
 }
 
+.profile-update-page,
 .lesson-create-page,
 .module-update-page,
 .module-create-page {
@@ -479,8 +480,8 @@ span.finsihLesson {
         i {
             position: absolute;
             right: 1rem;
-            top: 2.7rem;
-            font-size: 1.5rem;
+            top: 3rem;
+            font-size: 1rem;
             color: #101828;
         }
     }
