--- a/public/latest/assets/admin-css/student-dash.css
+++ b/public/latest/assets/admin-css/student-dash.css
@@ -1,35 +1,3 @@
-.student_summery_chart {
-  margin-right: 40px;
-}
-
-.student_summery_content ul li {
-  line-height: 30px;
-}
-
-.student_summery .student_summery_chart .chart {
-  position: relative;
-  width: 120px;
-  height: 120px;
-  margin: 0 auto;
-}
-
-.student_summery .student_summery_chart canvas {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.student_summery .student_summery_chart span {
-  color: #555;
-  display: block;
-  line-height: 120px;
-  text-align: center;
-  width: 120px;
-  font-size: 30px;
-  margin-left: 5px;
-}
-
 .status-card-box {
   border-radius: 0.5rem;
   background: var(--neutral-color-white, #FFF);
@@ -66,4 +34,310 @@
   font-style: normal;
   font-weight: 500;
   line-height: 1.25rem;
+  padding: 0.3rem 0.8rem;
+}
+
+.profile-widget-inner {
+  text-align: center;
+  margin-top: 1.5rem;
+}
+.profile-widget-inner img {
+  width: 6.875rem;
+  height: 6.875rem;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.profile-widget-inner h6 {
+  color: var(--text-light-primary, #212B36);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5rem;
+  margin-top: 0.5rem;
+}
+.profile-widget-inner p {
+  color: var(--text-light-secondary, #637381);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.375rem;
+  margin-top: 0.2rem;
+}
+
+.profile-widget-history {
+  margin-top: 1.25rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-bottom: 1.7rem;
+  border-radius: 0.5rem;
+  background: #F9F9F9;
+  padding: 0.75rem 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.profile-widget-history li {
+  text-align: center;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
+  padding-right: 1.5rem;
+}
+.profile-widget-history li:last-child {
+  border-right: 0;
+  padding-right: 0;
+}
+.profile-widget-history li h6 {
+  color: var(--text-light-primary, #212B36);
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5rem;
+}
+.profile-widget-history li p {
+  color: var(--text-light-secondary, #637381);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.125rem;
+  margin-top: 0.2rem;
+}
+
+.my-course-box {
+  border-radius: 0.5rem;
+  background: var(--neutral-color-white, #FFF);
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
+  padding: 1.5rem;
+}
+.my-course-box h5 {
+  color: var(--text-light-primary, #212B36);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.75rem;
+}
+.my-course-box .media {
+  align-items: center;
+  margin-top: 1.5rem;
+}
+.my-course-box .media img {
+  margin-right: 2rem;
+  max-width: 9.0625rem;
+}
+.my-course-box .media h6 {
+  color: var(--neutral-color-neutral-80, #1C2636);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%;
+}
+.my-course-box .media p {
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.my-course-box .media span {
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 155%;
+  display: block;
+}
+.my-course-box .media a.bttn {
+  border-radius: 0.375rem;
+  background: var(--transparent-grey-16, rgba(145, 158, 171, 0.16));
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.25rem;
+  display: inline-block;
+  padding: 0.3rem 0.5rem;
+}
+
+.course-progress-circle {
+  border-radius: 0.5rem;
+  background: var(--neutral-color-white, #FFF);
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
+  padding: 1.5rem;
+}
+.course-progress-circle h5 {
+  color: var(--text-light-primary, #212B36);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.75rem;
+  margin-bottom: 1.5rem;
+}
+
+.course-progress-content {
+  border-radius: 0.5rem;
+  background: var(--neutral-color-white, #FFF);
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
+  padding: 1.5rem;
+}
+.course-progress-content h5 {
+  color: var(--text-light-primary, #212B36);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.75rem;
+  margin-bottom: 1.5rem;
+}
+.course-progress-content ul li {
+  margin-bottom: 0.5rem;
+  font-size: 1.2rem;
+}
+.course-progress-content ul li i {
+  margin-right: 0.8rem;
+  color: #4B61FF;
+}
+
+.course-categories {
+  margin-bottom: 1.5rem;
+}
+.course-categories h5 {
+  color: var(--text-light-primary, #212B36);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.75rem;
+  margin-bottom: 1rem;
+}
+.course-categories .d-flex {
+  align-items: center;
+  flex-wrap: wrap;
+}
+.course-categories .d-flex a {
+  margin-right: 0.5em;
+  border-radius: 0.375rem;
+  background: var(--transparent-grey-16, rgba(145, 158, 171, 0.16));
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.25rem;
+  display: inline-block;
+  padding: 0.3rem 0.5rem;
+}
+
+.student-courses-lists-pages .course-single-item {
+  position: relative;
+}
+.student-courses-lists-pages .course-single-item .btn-ellip {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  background-color: rgba(255, 255, 255, 0.457);
+  z-index: 9;
+  border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+}
+.student-courses-lists-pages .course-ol-box {
+  border-radius: 0.5rem;
+  background: var(--background-light-paper, #FFF);
+  padding: 1rem 0.75rem;
+  position: absolute;
+  left: 102%;
+  top: -7.5%;
+  width: 110%;
+  height: 115%;
+  visibility: hidden;
+  transition: ease-in-out 0.3s;
+}
+.student-courses-lists-pages .course-ol-box h5 {
+  color: var(--text-light-primary, #212B36);
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.375rem;
+}
+.student-courses-lists-pages .course-ol-box span {
+  color: var(--text-light-secondary, #637381);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.375rem;
+  display: block;
+  margin: 0.5rem 0;
+}
+.student-courses-lists-pages .course-ol-box p {
+  color: var(--text-light-secondary, #637381);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.375rem;
+}
+.student-courses-lists-pages .course-ol-box h6 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25rem;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+}
+.student-courses-lists-pages .course-ol-box ul {
+  margin-top: 1rem;
+}
+.student-courses-lists-pages .course-ol-box ul li {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 0.5rem;
+}
+.student-courses-lists-pages .course-ol-box ul li i {
+  margin-right: 0.5rem;
+}
+.student-courses-lists-pages .course-ol-box a {
+  border-radius: 0.375rem;
+  background: var(--primary-color-blue, #294CFF);
+  display: block;
+  width: 100%;
+  text-align: center;
+  padding: 0.75rem 1.5rem;
+  color: #FFF;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  margin-top: 1rem;
+  transition: ease-in 0.3;
+  position: absolute;
+  left: 5%;
+  bottom: 1rem;
+  width: 90%;
+}
+.student-courses-lists-pages .course-ol-box a:hover {
+  background-color: #212B36;
+}
+.student-courses-lists-pages .active-ol .course-ol-box {
+  visibility: visible;
+}
+
+@media (min-width: 320px) and (max-width: 574px) {
+  .student-courses-lists-pages .course-ol-box {
+    left: 0%;
+    top: 16.5%;
+    width: 100%;
+  }
+}
+@media (min-width: 574px) and (max-width: 767px) {
+  .student-courses-lists-pages .course-ol-box {
+    left: 0%;
+    top: 16.5%;
+    width: 100%;
+  }
 }
