--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -768,6 +768,17 @@
   height: 90%;
   z-index: -1;
 }
+.student-profile-update-page .own-profile-box .custom-padding .profile-picture-box .img-upload .ol:before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: rgba(22, 28, 36, 0.4);
+  z-index: 2;
+}
 .student-profile-update-page .own-profile-box .custom-padding .profile-picture-box .img-upload .ol span {
   width: 100%;
   height: 100%;
