--- a/scss/student-dash.scss
+++ b/scss/student-dash.scss
@@ -283,6 +283,7 @@
         height: 115%;
         visibility: hidden;
         transition: ease-in-out .3s;
+        z-index: 999;
 
         h5 {
             color: var(--text-light-primary, #212B36);
@@ -435,7 +436,8 @@
         background-color: #294CFF;
         color: #fff;
     }
-    input{
+
+    input {
         border: 0;
         background-color: transparent;
         padding-bottom: 0.2rem;
@@ -445,53 +447,223 @@
         width: 70%;
     }
 
-    .form-rev{
+    .form-rev {
         @include m.df(space-between);
 
     }
 
-    
- .rating-group {
-    display: inline-flex;
-  }
-   .rating__icon {
-    pointer-events: none;
-  }
-   .rating__input {
-    position: absolute !important;
-    left: -9999px !important;
-  }
-   .rating__label {
-    cursor: pointer;
-    padding: 0 0.1em;
-    font-size: 1.2rem;
-  }
-   .rating__icon--star {
-    color: #4c60ff;
-  }
-   .rating__icon--none {
-    color: #eee;
-  }
-   .rating__input--none:checked + .rating__label .rating__icon--none {
-    color: #4c60ff;
-  }
-   .rating__input:checked ~ .rating__label .rating__icon--star {
-    color: #ddd;
-  }
-   .rating-group:hover .rating__label .rating__icon--star {
-    color: #4c60ff;
-  }
-   .rating__input:hover ~ .rating__label .rating__icon--star {
-    color: #ddd;
-  }
-   .rating-group:hover .rating__input--none:not(:hover) + .rating__label .rating__icon--none {
-    color: #eee;
-  }
-   .rating__input--none:hover + .rating__label .rating__icon--none {
-    color: #4c60ff;
-  }
-  
+
+    .rating-group {
+        display: inline-flex;
+    }
+
+    .rating__icon {
+        pointer-events: none;
+    }
+
+    .rating__input {
+        position: absolute !important;
+        left: -9999px !important;
+    }
+
+    .rating__label {
+        cursor: pointer;
+        padding: 0 0.1em;
+        font-size: 1.2rem;
+    }
+
+    .rating__icon--star {
+        color: #4c60ff;
+    }
+
+    .rating__icon--none {
+        color: #eee;
+    }
+
+    .rating__input--none:checked+.rating__label .rating__icon--none {
+        color: #4c60ff;
+    }
+
+    .rating__input:checked~.rating__label .rating__icon--star {
+        color: #ddd;
+    }
+
+    .rating-group:hover .rating__label .rating__icon--star {
+        color: #4c60ff;
+    }
+
+    .rating__input:hover~.rating__label .rating__icon--star {
+        color: #ddd;
+    }
+
+    .rating-group:hover .rating__input--none:not(:hover)+.rating__label .rating__icon--none {
+        color: #eee;
+    }
+
+    .rating__input--none:hover+.rating__label .rating__icon--none {
+        color: #4c60ff;
+    }
+
 }
+
+.course-overview-page {
+    padding-top: 0;
+
+    .overview-banner-box {
+        background: var(--neutral-color-neutral-80, #1C2636);
+        padding: 5rem 0rem;
+
+        .banner-title {
+            h1 {
+                color: var(--neutral-color-white, #FFF);
+                font-size: 2.5rem;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 120%;
+                margin-bottom: 0.5rem;
+                text-transform: capitalize;
+            }
+
+            p {
+                color: var(--neutral-color-neutral-30, #E5ECF6);
+                font-size: 1.125rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 130%;
+            }
+
+            .media {
+                align-items: center;
+                margin-top: 2rem;
+
+                img {
+                    width: 2.75rem;
+                    height: 2.75rem;
+                    border-radius: 6.25rem;
+                    border: 1px solid var(--neutral-color-white, #FFF);
+                    margin-right: 1rem;
+                    object-fit: cover;
+                }
+
+                h5 {
+                    color: var(--neutral-color-neutral-30, #E5ECF6);
+                    font-size: 1rem;
+                    font-style: normal;
+                    font-weight: 600;
+                    line-height: 1.375rem;
+                }
+
+                h6 {
+                    color: var(--neutral-color-neutral-40, #C5CCD8);
+                    font-size: 0.75rem;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 1.375rem;
+                }
+            }
+
+            h4 {
+                color: var(--neutral-40, #E0E0E0);
+                font-size: 0.875rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 150%;
+                margin-top: 0.5rem;
+            }
+        }
+    }
+}
+
+.what-you-learn-box {
+    margin: 3rem 0;
+
+    h3 {
+        color: var(--neutral-color-neutral-80, #1C2636);
+        font-size: 2rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 120%; 
+        margin-bottom: 2rem;
+    }
+
+    ul {
+        border-radius: 1rem;
+        border: 1px solid var(--neutral-40, #E0E0E0);
+        background: var(--neutral-10, #FFF);
+        padding: 1.5rem;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        gap: .5rem;
+
+        li {
+            @include m.df;
+            align-items: flex-start;
+            color: var(--neutral-90, #252525);
+            font-size: 1rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%;
+            margin-top: .75rem;
+            margin-bottom: .75rem;
+
+            i {
+                margin-right: 0.5rem;
+                display: inline-block;
+                margin-top: 0.3rem;
+            }
+        }
+    }
+}
+
+.course-content.course-outline-wrap { 
+	max-height: auto; 
+    overflow-y: auto;
+    margin-bottom: 3rem;
+    .accordion .accordion-item{
+        &:first-child{
+            border-top: 0!important;
+        }
+        .d-flex{
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+        }
+    }
+}
+
+.common-header{
+    margin-bottom: 2rem;
+    h3 {
+        color: var(--neutral-color-neutral-80, #1C2636);
+        font-size: 2rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 120%; 
+        margin-bottom: 2rem;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 // small phone device
 @include q.responsive(phone) {
@@ -500,19 +672,23 @@
         top: 16.5%;
         width: 100%;
     }
+
     .course-review-wrap .media.course-review-input-box span.avtar {
         width: 2.5rem;
         height: 2.5rem;
-        font-size: 1rem; 
-        margin-right: 1rem; 
+        font-size: 1rem;
+        margin-right: 1rem;
     }
-    .common-bttn{
+
+    .common-bttn {
         padding: .5rem 1rem;
     }
-    .media.course-title{
+
+    .media.course-title {
         flex-direction: column;
         align-items: flex-start;
-        .common-bttn{
+
+        .common-bttn {
             margin-top: 0.5rem;
         }
     }
@@ -525,19 +701,23 @@
         top: 16.5%;
         width: 100%;
     }
+
     .course-review-wrap .media.course-review-input-box span.avtar {
         width: 2.5rem;
         height: 2.5rem;
-        font-size: 1rem; 
-        margin-right: 1rem; 
+        font-size: 1rem;
+        margin-right: 1rem;
     }
-    .common-bttn{
+
+    .common-bttn {
         padding: .5rem 1rem;
     }
-    .media.course-title{
+
+    .media.course-title {
         flex-direction: column;
         align-items: flex-start;
-        .common-bttn{
+
+        .common-bttn {
             margin-top: 0.5rem;
         }
     }
