--- a/scss/user.scss
+++ b/scss/user.scss
@@ -869,6 +869,8 @@
                     position: relative;
                     padding: 1rem;
                     z-index: 1;
+                    
+                    
 
                     .ol {
                         position: absolute;
@@ -876,7 +878,19 @@
                         top: 5%;
                         width: 90%;
                         height: 90%;
-                        z-index: -1;
+                        z-index: -1; 
+
+                        &:before{
+                            position: absolute;
+                            content: "";
+                            left: 0;
+                            top: 0;
+                            width: 100%;
+                            height: 100%;
+                            border-radius: 50%;
+                            background-color: rgba(22, 28, 36, 0.4);
+                            z-index: 2;
+                        }
 
                         span {
                             width: 100%;
